--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -266,7 +266,7 @@
                                 </constraints>
                                 <state key="normal" title="New game"/>
                                 <connections>
-                                    <action selector="createNewGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sV0-mk-cMR"/>
+                                    <action selector="newGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p40-Xp-ZuU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8d-gJ-0rV">
@@ -280,16 +280,28 @@
                                     <action selector="getNewCards:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p9E-gd-y8j"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Fk-2b-sYw">
+                                <rect key="frame" x="20" y="49" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Sal-I0-AQu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="w4l-aJ-2Rv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="229-BL-eEr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Fk-2b-sYw" secondAttribute="trailing" constant="20" id="1Op-8j-Q4h"/>
                             <constraint firstItem="a8d-gJ-0rV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="4rf-vZ-S8V"/>
+                            <constraint firstItem="1Fk-2b-sYw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="Cx9-xF-JDo"/>
                             <constraint firstItem="iWA-0p-QrY" firstAttribute="top" secondItem="a8d-gJ-0rV" secondAttribute="bottom" constant="8" id="EBz-EN-hpd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a8d-gJ-0rV" secondAttribute="trailing" constant="5" id="Fvx-9r-PAr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iWA-0p-QrY" secondAttribute="trailing" constant="5" id="WqU-hU-xsT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iWA-0p-QrY" secondAttribute="bottom" id="bfj-V8-SVv"/>
                             <constraint firstItem="iWA-0p-QrY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="gKc-sP-msN"/>
+                            <constraint firstItem="w4l-aJ-2Rv" firstAttribute="top" secondItem="1Fk-2b-sYw" secondAttribute="bottom" constant="5" id="pnv-Qi-Hyp"/>
+                            <constraint firstItem="1Fk-2b-sYw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vYt-jN-Hsy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w4l-aJ-2Rv" secondAttribute="trailing" constant="5" id="vrU-jP-xMq"/>
                             <constraint firstItem="w4l-aJ-2Rv" firstAttribute="bottom" secondItem="a8d-gJ-0rV" secondAttribute="top" constant="-10" id="wDb-lP-hR2"/>
                             <constraint firstItem="w4l-aJ-2Rv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="zfW-ZD-u18"/>
@@ -297,6 +309,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="scopeLabel" destination="1Fk-2b-sYw" id="5y6-yP-jCo"/>
                         <outletCollection property="buttons" destination="xA4-rO-iP8" collectionClass="NSMutableArray" id="hYU-NQ-3Nz"/>
                         <outletCollection property="buttons" destination="noI-Uz-QAp" collectionClass="NSMutableArray" id="KV7-xO-KI8"/>
                         <outletCollection property="buttons" destination="Zn1-KX-rRZ" collectionClass="NSMutableArray" id="4hj-Ki-DXk"/>
